# minizip

./: CMakeLists.txt  build_minizip_lib.bat  ioapi.cpp  main.cpp  manual.tjs  minizip.sln  minizip.vcxproj  narrow.h  readme.txt  storage.cpp  vcpkg.json  vs_flag_override.cmake
